@@ -1,3 +1,9 @@
+2015-12-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sdas/linksrc/lkelf.c,
+	  sdas/linksrc/lkmain.c:
+	  STM8 ELF linker support from patch #251.
+
 2015-12-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCmain.c:
